# tflite

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/: stale.yml
assets/: disclaimer.eml
build-scripts/: install_cmake.sh
docs/: ATan2Options.html  AbsOptions.html  AbsOptions.m.html  ActivationFunctionType.html  ActivationFunctionType.m.html  AddNOptions.html  AddNOptions.m.html  AddOptions.html  AddOptions.m.html  ArgMaxOptions.html  ArgMaxOptions.m.html  ArgMinOptions.html  ArgMinOptions.m.html  AssignVariableOptions.html  BatchMatMulOptions.html  BatchMatMulOptions.m.html  BatchToSpaceNDOptions.html  BatchToSpaceNDOptions.m.html  BidirectionalSequenceLSTMOptions.html  BidirectionalSequenceLSTMOptions.m.html  BidirectionalSequenceRNNOptions.html  BidirectionalSequenceRNNOptions.m.html  BitcastOptions.html  BitwiseXorOptions.html  BroadcastToOptions.html  BucketizeOptions.html  Buffer.html  Buffer.m.html  BuiltinOperator.html  BuiltinOperator.m.html  BuiltinOptions.html  BuiltinOptions.m.html  BuiltinOptions2.html  CallOnceOptions.html  CallOptions.html  CallOptions.m.html  CastOptions.html  CastOptions.m.html  CombinerType.html  CombinerType.m.html  (+277 more)
python/: setup.py
scripts/: build-new-version-docker.sh  build-wheel.sh  gen-doc.sh  gen-op-list.py  test-all.sh  update-importing.py  update-init-py-version.sh  update-schema.sh  upload-pip.sh
tests/: mobilenet_example.py  test_easy_import.py  test_mobilenet.py  test_nested_import.py  test_original_import.py  test_simple_import.py  test_tflite_module.py  test_utils.py  util_for_test.py
tflite/: ATan2Options.py  AbsOptions.py  AddNOptions.py  AddOptions.py  BatchMatMulOptions.py  BidirectionalSequenceLSTMOptions.py  BidirectionalSequenceRNNOptions.py  Buffer.py  (+86 more)
(+109 files in other folders)
