[metadata]
name=tflite
version = attr: tflite.__version__
description = Parsing TensorFlow Lite Models (*.tflite) Easily

author = 王振华(Zhenhua WANG)
author_email = i@zhenhuaw.me
url = https://zhenhuaw.me/tflite

long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
keywords = tflite, tensorflow

project_urls =
    Bug Reports = https://github.com/zhenhuaw-me/tflite/issues
    Source = https://github.com/zhenhuaw-me/tflite

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
install_requires =
    flatbuffers
    numpy
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4
packages = find:

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1
